--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "backend": "json-server --watch db.json --port 3000"
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
     "@popperjs/core": "^2.11.2",
+    "aos": "^2.3.4",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
