--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "backend": "json-server --watch db.json --port 3000"
+    "backend": "json-server --watch data.json --port 3000"
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
