--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
     "firebase": "^9.6.9",
     "mutationobserver-shim": "^0.3.7",
@@ -21,6 +22,7 @@
     "portal-vue": "^2.1.7",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
+    "vue-chart-3": "^3.1.6",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
