--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-chart-3": "^3.1.6",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
